Imp.g4
grammar Imp;
progr : series NEWLINE;
series : stmt (';' stmt)*;
stmt : assign_stmt | cond_stmt | loop | SKIP_COM;
assign_stmt : VARNAME ':=' (expr | logical_expr);
cond_stmt : 'if' (logical_expr) 'then' series ('else' series)? 'fi';
loop : 'while' (logical_expr) 'do' series 'od';
logical_expr : logical_expr DISJ logical_term | logical_term;
logical_term : logical_term CONJ logical_neg_elem | logical_neg_elem;
logical_neg_elem : NEG logical_elem | logical_elem;
logical_elem : '('logical_expr')' | BOOL | compar | VARNAME;
compar : expr RELATION expr;
expr : term (WEAKOP term)*;
term : elem (STRONGOP elem)*;
elem : NUMBER | VARNAME | '(' expr ')';
SKIP_COM : 'skip';
BOOL : 'TRUE' | 'FALSE';
CONJ : 'and';
DISJ : 'or';
NEG : 'not';
NEWLINE : '\r' ? '\n';
WEAKOP : '+' | '-';
STRONGOP : '*' | '/';
RELATION : '<>' | '=<' | '>='| '=' | '<' | '>' ;
NUMBER : [1-9][0-9]* | [0];
VARNAME : ([a-z]|[A-Z]|'_') ([a-z]|[A-Z]|[0-9]|'_')*;
WS : [ \t\r\n]+ -> skip;
