test2/ImpParser.py
# Generated from C:/Users/pauli/Documents/uni/6_sem/pvsus/md03/md03_1/IMP_D_TO_AM\Imp.g4 by ANTLR 4.9.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class ImpParser ( Parser ):

    grammarFileName = "Imp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"':='", u"'if'", u"'then'", 
                     u"'else'", u"'fi'", u"'while'", u"'do'", u"'od'", u"'('", 
                     u"')'", u"'skip'", u"<INVALID>", u"'and'", u"'or'", 
                     u"'not'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"SKIP_COM", u"BOOL", u"CONJ", u"DISJ", u"NEG", u"NEWLINE", 
                      u"WEAKOP", u"STRONGOP", u"RELATION", u"NUMBER", u"VARNAME", 
                      u"WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_assign_stmt = 3
    RULE_cond_stmt = 4
    RULE_loop = 5
    RULE_logical_expr = 6
    RULE_logical_term = 7
    RULE_logical_neg_elem = 8
    RULE_logical_elem = 9
    RULE_compar = 10
    RULE_expr = 11
    RULE_term = 12
    RULE_elem = 13

    ruleNames =  [ u"progr", u"series", u"stmt", u"assign_stmt", u"cond_stmt", 
                   u"loop", u"logical_expr", u"logical_term", u"logical_neg_elem", 
                   u"logical_elem", u"compar", u"expr", u"term", u"elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    SKIP_COM=12
    BOOL=13
    CONJ=14
    DISJ=15
    NEG=16
    NEWLINE=17
    WEAKOP=18
    STRONGOP=19
    RELATION=20
    NUMBER=21
    VARNAME=22
    WS=23

    def __init__(self, input, output=sys.stdout):
        super(ImpParser, self).__init__(input, output=output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.ProgrContext, self).__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(ImpParser.SeriesContext,0)


        def NEWLINE(self):
            return self.getToken(ImpParser.NEWLINE, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_progr

        def enterRule(self, listener):
            if hasattr(listener, "enterProgr"):
                listener.enterProgr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgr"):
                listener.exitProgr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProgr"):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = ImpParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.series()
            self.state = 29
            self.match(ImpParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.SeriesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ImpParser.StmtContext)
            else:
                return self.getTypedRuleContext(ImpParser.StmtContext,i)


        def getRuleIndex(self):
            return ImpParser.RULE_series

        def enterRule(self, listener):
            if hasattr(listener, "enterSeries"):
                listener.enterSeries(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSeries"):
                listener.exitSeries(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSeries"):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = ImpParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.stmt()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ImpParser.T__0:
                self.state = 32
                self.match(ImpParser.T__0)
                self.state = 33
                self.stmt()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.StmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(ImpParser.Assign_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(ImpParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(ImpParser.LoopContext,0)


        def SKIP_COM(self):
            return self.getToken(ImpParser.SKIP_COM, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ImpParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ImpParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.assign_stmt()
                pass
            elif token in [ImpParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.cond_stmt()
                pass
            elif token in [ImpParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.loop()
                pass
            elif token in [ImpParser.SKIP_COM]:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.match(ImpParser.SKIP_COM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Assign_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(ImpParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(ImpParser.ExprContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(ImpParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return ImpParser.RULE_assign_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterAssign_stmt"):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssign_stmt"):
                listener.exitAssign_stmt(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssign_stmt"):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = ImpParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ImpParser.VARNAME)
            self.state = 46
            self.match(ImpParser.T__1)
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 47
                self.expr()
                pass

            elif la_ == 2:
                self.state = 48
                self.logical_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Cond_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def series(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ImpParser.SeriesContext)
            else:
                return self.getTypedRuleContext(ImpParser.SeriesContext,i)


        def logical_expr(self):
            return self.getTypedRuleContext(ImpParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return ImpParser.RULE_cond_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterCond_stmt"):
                listener.enterCond_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCond_stmt"):
                listener.exitCond_stmt(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCond_stmt"):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = ImpParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(ImpParser.T__2)

            self.state = 52
            self.logical_expr(0)
            self.state = 53
            self.match(ImpParser.T__3)
            self.state = 54
            self.series()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ImpParser.T__4:
                self.state = 55
                self.match(ImpParser.T__4)
                self.state = 56
                self.series()


            self.state = 59
            self.match(ImpParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.LoopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(ImpParser.SeriesContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(ImpParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return ImpParser.RULE_loop

        def enterRule(self, listener):
            if hasattr(listener, "enterLoop"):
                listener.enterLoop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLoop"):
                listener.exitLoop(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLoop"):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = ImpParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ImpParser.T__6)

            self.state = 62
            self.logical_expr(0)
            self.state = 63
            self.match(ImpParser.T__7)
            self.state = 64
            self.series()
            self.state = 65
            self.match(ImpParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Logical_exprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def logical_term(self):
            return self.getTypedRuleContext(ImpParser.Logical_termContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(ImpParser.Logical_exprContext,0)


        def DISJ(self):
            return self.getToken(ImpParser.DISJ, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_logical_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterLogical_expr"):
                listener.enterLogical_expr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLogical_expr"):
                listener.exitLogical_expr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLogical_expr"):
                return visitor.visitLogical_expr(self)
            else:
                return visitor.visitChildren(self)



    def logical_expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ImpParser.Logical_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_logical_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.logical_term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ImpParser.Logical_exprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                    self.state = 70
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 71
                    self.match(ImpParser.DISJ)
                    self.state = 72
                    self.logical_term(0) 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logical_termContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Logical_termContext, self).__init__(parent, invokingState)
            self.parser = parser

        def logical_neg_elem(self):
            return self.getTypedRuleContext(ImpParser.Logical_neg_elemContext,0)


        def logical_term(self):
            return self.getTypedRuleContext(ImpParser.Logical_termContext,0)


        def CONJ(self):
            return self.getToken(ImpParser.CONJ, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_logical_term

        def enterRule(self, listener):
            if hasattr(listener, "enterLogical_term"):
                listener.enterLogical_term(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLogical_term"):
                listener.exitLogical_term(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLogical_term"):
                return visitor.visitLogical_term(self)
            else:
                return visitor.visitChildren(self)



    def logical_term(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ImpParser.Logical_termContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_logical_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.logical_neg_elem()
            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ImpParser.Logical_termContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_term)
                    self.state = 81
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 82
                    self.match(ImpParser.CONJ)
                    self.state = 83
                    self.logical_neg_elem() 
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logical_neg_elemContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Logical_neg_elemContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEG(self):
            return self.getToken(ImpParser.NEG, 0)

        def logical_elem(self):
            return self.getTypedRuleContext(ImpParser.Logical_elemContext,0)


        def getRuleIndex(self):
            return ImpParser.RULE_logical_neg_elem

        def enterRule(self, listener):
            if hasattr(listener, "enterLogical_neg_elem"):
                listener.enterLogical_neg_elem(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLogical_neg_elem"):
                listener.exitLogical_neg_elem(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLogical_neg_elem"):
                return visitor.visitLogical_neg_elem(self)
            else:
                return visitor.visitChildren(self)




    def logical_neg_elem(self):

        localctx = ImpParser.Logical_neg_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logical_neg_elem)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ImpParser.NEG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(ImpParser.NEG)
                self.state = 90
                self.logical_elem()
                pass
            elif token in [ImpParser.T__9, ImpParser.BOOL, ImpParser.NUMBER, ImpParser.VARNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.logical_elem()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_elemContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.Logical_elemContext, self).__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self):
            return self.getTypedRuleContext(ImpParser.Logical_exprContext,0)


        def BOOL(self):
            return self.getToken(ImpParser.BOOL, 0)

        def compar(self):
            return self.getTypedRuleContext(ImpParser.ComparContext,0)


        def VARNAME(self):
            return self.getToken(ImpParser.VARNAME, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_logical_elem

        def enterRule(self, listener):
            if hasattr(listener, "enterLogical_elem"):
                listener.enterLogical_elem(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLogical_elem"):
                listener.exitLogical_elem(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLogical_elem"):
                return visitor.visitLogical_elem(self)
            else:
                return visitor.visitChildren(self)




    def logical_elem(self):

        localctx = ImpParser.Logical_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logical_elem)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(ImpParser.T__9)
                self.state = 95
                self.logical_expr(0)
                self.state = 96
                self.match(ImpParser.T__10)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(ImpParser.BOOL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.compar()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(ImpParser.VARNAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.ComparContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ImpParser.ExprContext)
            else:
                return self.getTypedRuleContext(ImpParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(ImpParser.RELATION, 0)

        def getRuleIndex(self):
            return ImpParser.RULE_compar

        def enterRule(self, listener):
            if hasattr(listener, "enterCompar"):
                listener.enterCompar(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCompar"):
                listener.exitCompar(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCompar"):
                return visitor.visitCompar(self)
            else:
                return visitor.visitChildren(self)




    def compar(self):

        localctx = ImpParser.ComparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expr()
            self.state = 104
            self.match(ImpParser.RELATION)
            self.state = 105
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def term(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ImpParser.TermContext)
            else:
                return self.getTypedRuleContext(ImpParser.TermContext,i)


        def WEAKOP(self, i=None):
            if i is None:
                return self.getTokens(ImpParser.WEAKOP)
            else:
                return self.getToken(ImpParser.WEAKOP, i)

        def getRuleIndex(self):
            return ImpParser.RULE_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ImpParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.term()
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(ImpParser.WEAKOP)
                    self.state = 109
                    self.term() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.TermContext, self).__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ImpParser.ElemContext)
            else:
                return self.getTypedRuleContext(ImpParser.ElemContext,i)


        def STRONGOP(self, i=None):
            if i is None:
                return self.getTokens(ImpParser.STRONGOP)
            else:
                return self.getToken(ImpParser.STRONGOP, i)

        def getRuleIndex(self):
            return ImpParser.RULE_term

        def enterRule(self, listener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTerm"):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = ImpParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.elem()
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.match(ImpParser.STRONGOP)
                    self.state = 117
                    self.elem() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ImpParser.ElemContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ImpParser.NUMBER, 0)

        def VARNAME(self):
            return self.getToken(ImpParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(ImpParser.ExprContext,0)


        def getRuleIndex(self):
            return ImpParser.RULE_elem

        def enterRule(self, listener):
            if hasattr(listener, "enterElem"):
                listener.enterElem(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitElem"):
                listener.exitElem(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitElem"):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):

        localctx = ImpParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elem)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ImpParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(ImpParser.NUMBER)
                pass
            elif token in [ImpParser.VARNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(ImpParser.VARNAME)
                pass
            elif token in [ImpParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(ImpParser.T__9)
                self.state = 126
                self.expr()
                self.state = 127
                self.match(ImpParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.logical_expr_sempred
        self._predicates[7] = self.logical_term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def logical_expr_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def logical_term_sempred(self, localctx, predIndex):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




